--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/helper-explode-assignable-expression": "^7.18.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.7",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@storybook/addon-storyshots-puppeteer": "^7.4.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +20,7 @@
     "@types/react-dom": "^18.0.7",
     "@types/react-redux": "^7.1.26",
     "@types/uuid": "^9.0.2",
+    "puppeteer": "^21.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -34,7 +37,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "jest:integration": "jest -c integration/jest.config.js",
+    "test:integration": "start-server-and-test storybook http-get://localhost:6006 jest:integration"
   },
   "eslintConfig": {
     "extends": [
@@ -56,12 +61,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.20",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@storybook/addon-a11y": "^7.4.3",
     "@storybook/addon-essentials": "7.4.3",
     "@storybook/addon-interactions": "7.4.3",
     "@storybook/addon-links": "7.4.3",
     "@storybook/addon-onboarding": "1.0.8",
+    "@storybook/addon-storyshots": "^7.4.4",
     "@storybook/addon-storysource": "^7.4.4",
     "@storybook/blocks": "7.4.3",
     "@storybook/preset-create-react-app": "7.4.3",
@@ -70,7 +77,12 @@
     "@storybook/testing-library": "0.2.1",
     "babel-plugin-named-exports-order": "0.0.2",
     "eslint-plugin-storybook": "^0.6.13",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-image-snapshot": "^6.2.0",
+    "jest-puppeteer": "^9.0.0",
     "prop-types": "15.8.1",
+    "start-server-and-test": "^2.0.1",
     "storybook": "7.4.3",
     "webpack": "5.88.2"
   }
